# display_o_tron

./: .gitignore  CMakeLists.txt  README.md  todo.md
src/: DebugDataSource.cpp  DebugDataSource.h  Dot.cpp  Dot.h  NextionHMI.cpp  NextionHMI.h  inputValueTypes.h  main.cpp
